--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,15 @@ jobs:
           node-version: '18.19.0'  # Use your required Node version
 
       # Install dependencies if package.json has changed
+        # Check for changes in package.json
       - name: Check for package.json changes
         id: check_changes
         run: |
-          git diff --exit-code HEAD^ HEAD -- package.json
-          echo "changes=false" >> $GITHUB_ENV
+          if git diff --name-only HEAD^ HEAD | grep -q "package.json"; then
+            echo "changes=true" >> $GITHUB_ENV
+          else
+            echo "changes=false" >> $GITHUB_ENV
+          fi
 
       - name: Install dependencies
         if: steps.check_changes.outputs.changes == 'true'
